test: update job submissions for model/template
