# frontend/swagger/v1/swagger.json
@@ -297,7 +297,9 @@
                     "input": "/api/v1/jobs/00000000-0000-0000-0000-000000000000/files/input.pdf",
                     "output": "/api/v1/jobs/00000000-0000-0000-0000-000000000000/files/output.json",
                     "error": "/api/v1/jobs/00000000-0000-0000-0000-000000000000/files/error.txt"
-                  }
+                  },
+                  "model": "model",
+                  "templateToken": "template"
                 }
               }
             }
@@ -1213,6 +1215,14 @@
           },
           "immediate": {
             "type": "boolean"
+          },
+          "model": {
+            "type": "string",
+            "nullable": true
+          },
+          "templateToken": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false,
@@ -1409,14 +1419,6 @@
             "nullable": true
           },
           "input": {
-            "type": "string",
-            "nullable": true
-          },
-          "prompt": {
-            "type": "string",
-            "nullable": true
-          },
-          "fields": {
             "type": "string",
             "nullable": true
           },
